--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11743,24 +11743,25 @@ input:focus {
   border-bottom: 1px solid #F7F7F7;
 }
 
-.nav-item {
+.nav-tabs .nav-link:hover {
+  border-bottom: 4px solid #0d5cb6;
+  color: #0d5cb6;
+}
+
+.nav-tabs .nav-item {
   margin: 0 16px;
 }
 
-.nav-item .nav-link {
+.nav-tabs .nav-item .nav-link {
   font-size: 13px;
   font-weight: 500;
   color: #242424;
   text-transform: capitalize;
   padding: 8px;
+  border: none;
 }
 
-.nav-item .nav-link--active {
-  border-bottom: 4px solid #0d5cb6;
-  color: #0d5cb6;
-}
-
-.nav-item .nav-link:hover {
+.nav-tabs .nav-item .active {
   border-bottom: 4px solid #0d5cb6;
   color: #0d5cb6;
 }
